# granicus-archiver

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  Pipfile  README.rst  clip-dump-template.html  compose-dev.yaml  compose.yaml  pyproject.toml
doc/source/: cli.rst  conf.py  configuration.rst  glossary.rst  granicus-setup.rst  index.rst  installation.rst  legistar-setup.rst  usage.rst
doc/source/reference/: aws.rst  config.rst  downloader.rst  index.rst  model.rst  types.rst  utils.rst
doc/source/reference/googledrive/: auth.rst  cache.rst  client.rst  config.rst  index.rst  pathtree.rst  types.rst
doc/source/reference/legistar/: exceptions.rst  guid_model.rst  index.rst  model.rst  rss_parser.rst  search_indexing.rst  types.rst
doc/source/reference/web/: app.rst  config.rst  filters.rst  index.rst  pagination.rst  s3client.rst  types.rst  views.rst
frontend-service/: gzip_params
frontend-service/templates/: default.conf.template
src/granicus_archiver/: __init__.py  cli.py  cli_lazy_group.py  click_extra_params.py  client.py  clips_cli.py  config.py  downloader.py  html_builder.py  model.py  parser.py  types.py  utils.py
src/granicus_archiver/aws/: cli.py  client.py
src/granicus_archiver/clips/: cli.py  client.py  html_builder.py  model.py  parser.py
src/granicus_archiver/googledrive/: .gitignore  auth.py  cache.py  client.py  config.py  pathtree.py  types.py
src/granicus_archiver/legistar/: __init__.py  cli.py  client.py  exceptions.py  guid_client.py  guid_model.py  model.py  rss_parser.py  search_indexing.py  types.py
src/granicus_archiver/web/: __main__.py  app.py  config.py  filters.py  pagination.py  s3client.py  types.py  views.py
src/granicus_archiver/web/static/: theme.js  utils.js  videoTracks.js
src/granicus_archiver/web/templates/: base.jinja2  home.jinja2  item-list-base.jinja2
src/granicus_archiver/web/templates/clips/: clip-change.jinja2  clip-list.jinja2  clip.jinja2
src/granicus_archiver/web/templates/includes/: list-filter-form.jinja2  macros.jinja2  navbar-macros.jinja2  navbar.jinja2  paginator.jinja2  video-embed.jinja2
src/granicus_archiver/web/templates/legistar/: item-base.jinja2  item-change.jinja2  item.jinja2  items.jinja2
src/granicus_dump/: __main__.py  cli.py  client.py  html_builder.py  model.py  parser.py  utils.py
src/granicus_dump/googledrive/: .gitignore  auth.py  client.py  config.py
template-inspection/: agenda-template.html  minutes-template.html  ondemand.html
tests/: test_pathtree.py  test_utils.py
webapp/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
webapp/.nginx/templates/: default.conf.template
webapp/app/: layout.tsx  model.ts  page.tsx  utils.ts
webapp/app/clip/[clipId]/: page.tsx
webapp/app/clip/[clipId]/player/: clientComponents.tsx  page.tsx
webapp/app/components/: Button.tsx  ClipList.tsx  Columns.tsx  FlexBox.tsx  Section.tsx  clientUtils.ts  types.ts  utils.ts
