[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "granicus-archiver"
version = "0.0.1"
dependencies = [
    "aiohttp",
    "aiohttp-jinja2",
    "jinja2",
    "aiojobs",
    "aiofile",
    "yarl",
    "pyyaml",
    "pyquery",
    "click",
    "loguru",
    "aiogoogle",
    "pypdf",
    "appdirs",
]

[project.scripts]
granicus-archiver = "granicus_archiver.cli:cli"

[project.optional-dependencies]
tests = ["pytest", "pytest-asyncio"]
docs = ["sphinx", "furo", "sphinx-click"]


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = [
    'tests',
    'src'
]
addopts = "--doctest-modules"
