[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "granicus-archiver"
version = "0.0.1"
dependencies = [
    "aiohttp",
    "aiohttp-jinja2",
    "jinja2",
    "aiojobs",
    "aiofile",
    "yarl",
    "aioboto3",
    "pyyaml",
    "pyquery",
    "click",
    "loguru",
    "aiogoogle",
    "pypdf",
    "appdirs",
    "python-dotenv",
]

[project.scripts]
granicus-archiver = "granicus_archiver.cli:cli"

[project.optional-dependencies]
tests = ["pytest", "pytest-asyncio"]
docs = ["sphinx", "furo", "sphinx-click"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"granicus_archiver.web.templates" = ["*.jinja2"]
"granicus_archiver.web.static" = ["*.js", "*.css"]


[tool.pytest.ini_options]
testpaths = [
    'tests',
    'src'
]
addopts = "--doctest-modules"
asyncio_default_fixture_loop_scope = 'function'
asyncio_mode = 'auto'

[dependency-groups]
tests = [
    "pytest",
    "pytest-asyncio",
]
docs = [
    "sphinx",
    "furo",
    "sphinx-click",
]
dev = [
    "ipython>=8.32.0",
    "types-aiobotocore[essential]>=2.19.0",
    {include-group = "docs"},
    {include-group = "tests"},
]
