[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "granicus-archiver"
version = "0.0.1"
authors = [
    {name = "Matthew Reid", email = "matt.reid@mansfieldtexas.gov"}
]
description = "A tool for archiving Granicus and Legistar meeting data"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "aiohttp-jinja2",
    "jinja2",
    "aiojobs",
    "aiofile",
    "yarl",
    "aioboto3",
    "pyyaml",
    "pyquery",
    "click",
    "loguru",
    "aiogoogle",
    "pypdf",
    "appdirs",
    "python-dotenv",
    "click-extra>=4.15.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/MansfieldTX-MattR/granicus-archiver"
Repository = "https://github.com/MansfieldTX-MattR/granicus-archiver"
Documentation = "https://granicus-archiver.readthedocs.io"

[project.scripts]
granicus-archiver = "granicus_archiver.cli:cli"

[project.optional-dependencies]
tests = ["pytest", "pytest-asyncio"]
docs = [
    "sphinx", "furo", "sphinx-click", "sphinx-design",
    "types-aiobotocore[essential]",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"granicus_archiver.web.templates" = ["*.jinja2"]
"granicus_archiver.web.static" = ["*.js", "*.css"]


[tool.pytest.ini_options]
testpaths = [
    'tests',
    'src'
]
addopts = "--doctest-modules"
asyncio_default_fixture_loop_scope = 'function'
asyncio_mode = 'auto'

[dependency-groups]
tests = [
    "pytest",
    "pytest-asyncio",
]
docs = [
    "sphinx",
    "furo",
    "sphinx-click",
    "sphinx-design>=0.6.1",
    "types-aiobotocore[essential]>=2.19.0",
    "click-extra[sphinx]>=4.15.0",
]
dev = [
    "ipython>=8.32.0",
    "types-aiobotocore[essential]>=2.19.0",
    {include-group = "docs"},
    {include-group = "tests"},
]
